Revision history for Perl module HTTP::Lite

2.43 2014-01-29
    - Added "use warnings" (!)
    - Moved test.pl into t/original-tests.t

2.42 2013-07-21
    - Fixed typos reported by David Steinbrunner (thanks!)

2.41 2013-07-20
    - Reformatted this file according to CPAN::Changes::Spec

2.4 2012-07-20
    - Fixed RT #13791, which meant you couldn't request http://foobar.com --
      had to have to trailing slash on the URL.
    - Don't add request header if value passed is undef (RT #4546).
    - Fixed bug where writing the request can get stuck in a loop.
      Bug reported by Florian Kirchmeir. Fix based on Florian's patch.
    - RT #35360 fixed (fix included in report).
    - Documentation tidy-up
    - Neil Bowers (NEILB) granted co-maint by Adam (thanks)

2.3 2010-12-14
	- No functional changes
	- Updated Module::Install to 1.00
	- Updated author tests and moved to xt directory

2.2 2009-10-01
	- Moved Lite.pm into lib directory
	- Reversed the Changes file order to reverse chronological
	- Moved to Makefile.PL to Module::Install to autodetect more things
	- Add no_index entries for the test data
	- Remove reliable on (partially) dead website for testing
	- Now this module is mature and unlikely to change much, move to
	  a more stable and less complicated versioning scheme that suffers
	  less complications in the Perl toolchain. Also, dotted integers
	  without the use of something like version.pm isn't strictly
	  allowed.

2.1.6 2004-01-21
	- Fixed User-Agent header problem
	- Fixed lowercase header bugs
	- Thanks goes to contributed patches by various people

2.1.5 2003-10-05
	- Fixed duplicate my in method()
	- Added default content-type for posts
	- header_at_once mode, patch submitted by Roman Radaschutz

2.1.3 2002-02-10
	- Documentation fixes
	- Fixed large write bug in http_write
	- Documented callback system
	- Added local_addr and local_port settings
	- Added method setting to allow use of any request method (GET, PUT,
	  POST, HEAD)
